<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <LinearLayout
        android:id="@id/common_activity_title_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:id="@id/status_bar_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/transparent"
            android:visibility="gone"/>
        <RelativeLayout
            android:id="@id/common_activity_title_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height">
            <TextView
                android:id="@id/loginRegisterTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login_register"
                android:textSize="@dimen/textsize_17"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:textColor="@color/color_blue_light"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@id/loginHeadRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@id/loginHeadImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/default_head"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@id/loginAccountLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@id/loginAccountTextView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/login_account"
                android:textSize="@dimen/textsize_17"
                android:textColor="@color/textcolor_primary" />
            <EditText
                android:id="@id/loginAccountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="@dimen/textsize_18"
                android:hint="@string/login_account_hint"
                android:textColorHint="@color/gray_cccccc"
                android:textCursorDrawable="@drawable/edittext_cursor_color"
                android:background="@null"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@id/loginAccountTextView"
                android:layout_toLeftOf="@id/loginAccountClearImageView"/>
            <ImageView
                android:id="@id/loginAccountClearImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="1dp"
                android:src="@mipmap/clear"
                android:layout_alignParentRight="true"
                android:scaleType="centerInside"
                android:visibility="invisible"/>
        </RelativeLayout>
        <View
            android:id="@id/loginAccountLineView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_e5e5e5"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/loginPasswordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp">
            <TextView
                android:id="@id/loginPasswordTextView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_password"
                android:textSize="@dimen/textsize_17"
                android:textColor="@color/textcolor_primary"/>
            <EditText
                android:id="@id/loginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:singleLine="true"
                android:textSize="@dimen/textsize_18"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint"
                android:textColorHint="@color/gray_cccccc"
                android:textCursorDrawable="@drawable/edittext_cursor_color"
                android:layout_toRightOf="@id/loginPasswordTextView"
                android:layout_toLeftOf="@id/loginShowPasswordImageView"/>
            <ImageView
                android:id="@id/loginShowPasswordImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/eye_close"
                android:scaleType="centerInside"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <View
            android:id="@id/loginPasswordLineView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_e5e5e5"/>
        <Button
            android:id="@id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_login_in"
            android:gravity="center"
            android:textSize="@dimen/textsize_18"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle" />
        <TextView
            android:id="@id/loginForgetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginForgetPasswordText"
            android:textColor="@color/common_bg_green"
            android:textSize="@dimen/textsize_17"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@id/loginMoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginMoreText"
                android:layout_centerInParent="true"
                android:textSize="@dimen/textsize_12"
                android:textColor="@color/gray_cccccc"/>
            <View
                android:id="@id/loginMoreLeftView"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_centerVertical="true"
                android:background="@color/gray_cccccc"
                android:layout_toLeftOf="@id/loginMoreTextView"
                android:layout_marginRight="20dp"/>
            <View
                android:id="@id/loginMoreRightView"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_centerVertical="true"
                android:background="@color/gray_cccccc"
                android:layout_toRightOf="@id/loginMoreTextView"
                android:layout_marginLeft="20dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp">
            <ImageView
                android:id="@id/loginByWeiXinImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/login_by_weixin"
                android:scaleType="centerInside"
                android:layout_marginLeft="5dp"/>
            <ImageView
                android:id="@id/loginByQQImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/login_by_qq"
                android:layout_marginLeft="30dp"
                android:scaleType="centerInside"/>
            <ImageView
                android:id="@id/loginByWeiBoImageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/login_by_weibo"
                android:layout_marginLeft="30dp"
                android:scaleType="centerInside"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
